tests/fixtures/invalid/round_bool_list.py
# Cannot call round() with Bool, List[int]
x = round(True, [1, 2, 3])
